--- a/joystick.vcxproj.filters
+++ b/joystick.vcxproj.filters
@@ -23,5 +23,8 @@
     <ClInclude Include="MyForm.h">
       <Filter>Source Files</Filter>
     </ClInclude>
+    <ClInclude Include="used_classes.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
