--- a/joystick.vcxproj.filters
+++ b/joystick.vcxproj.filters
@@ -18,12 +18,18 @@
     <ClCompile Include="MyForm.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Home.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="login.h">
       <Filter>Source Files</Filter>
     </ClInclude>
     <ClInclude Include="used_classes.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Home.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
