--- a/joystick.vcxproj.filters
+++ b/joystick.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="Room1.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="room2.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="login.h">
@@ -36,6 +39,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Room1.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="room2.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
