--- a/joystick.vcxproj
+++ b/joystick.vcxproj
@@ -114,22 +114,32 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <Reference Include="PresentationCore" />
+    <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
+    <Reference Include="System.Xaml" />
     <Reference Include="System.Xml" />
+    <Reference Include="UIAutomationProvider" />
+    <Reference Include="WindowsBase" />
+    <Reference Include="WindowsFormsIntegration" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Home.cpp" />
     <ClCompile Include="MyForm.cpp" />
     <ClCompile Include="Room1.cpp" />
+    <ClCompile Include="room2.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Home.h">
       <FileType>CppForm</FileType>
     </ClInclude>
     <ClInclude Include="Room1.h">
+      <FileType>CppForm</FileType>
+    </ClInclude>
+    <ClInclude Include="room2.h">
       <FileType>CppForm</FileType>
     </ClInclude>
     <ClInclude Include="used_classes.h" />
@@ -146,6 +156,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Room1.resx">
       <DependentUpon>Room1.h</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="room2.resx">
+      <DependentUpon>room2.h</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
