--- a/joystick.vcxproj.filters
+++ b/joystick.vcxproj.filters
@@ -63,4 +63,7 @@
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="licenses.licx" />
+  </ItemGroup>
 </Project>
